sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:8: error: not found: value n
  n=getNombreValeurs()
  ^AlgCombSort:17: error: not found: value n
  while(i + ecart< n){
                   ^